[tool.poetry]
name = "llms101"
version = "0.1.0"
description = ""
authors = ["Dimitrios Ntkls"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandasai = "^2.1.1"
streamlit = "^1.35.0"
PyYAML = "^6.0.1"
sqlalchemy-bigquery = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
